--- a/lookbook_frontend/src/page/style/Result.module.css
+++ b/lookbook_frontend/src/page/style/Result.module.css
@@ -23,7 +23,7 @@
     font-family:  'Noto Sans KR', sans-serif;
     font-weight: bold;
     margin: 0px 0 10px 0;
-    font-size: 2em;
+    font-size: 40px;
 }
 
 
