--- a/lookbook_frontend/src/page/style/Tag.module.css
+++ b/lookbook_frontend/src/page/style/Tag.module.css
@@ -122,3 +122,23 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+
+
+li{
+    list-style: none;
+    display: inline-block;
+
+}
+
+.subTitle > p {
+    color: #868686;
+}
+
+.subTitleTag {
+    border: 2px solid brown;
+    width: 100px;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 10px;
+}
