이미지 불러오기 기능 구현

--- a/lookbook_frontend/src/page/style/Result.module.css
+++ b/lookbook_frontend/src/page/style/Result.module.css
@@ -8,8 +8,8 @@
 
 .main_img {
     height: 100vh;
-    width: 800px;
-    background-color: aqua;
+    width: 900px;
+    background-color: rgb(69, 96, 96);
 }
 
 .main_body {
